--- a/etc/mdlcfg.yaml
+++ b/etc/mdlcfg.yaml
@@ -37,23 +37,50 @@ Classifier:
     C: 1.0
     penalty: l1
     tol: 0.1
-- name: Expra Trees
+- name: Extra Trees
   params:
     max_features: 0.7
     min_samples_leaf: 20
     n_estimators: 500
-- name: Random Forest
+## GSE RF ##
+- name: Random Forest GSE
   params:
     max_features: 0.6
     min_samples_leaf: 1
-    n_estimators: 400
+    max_depth: 40
+    n_estimators: 200
     class_weight: balanced
-- name: GB LinearSVC
+## GSM RF 0 ##
+- name: Random Forest GSM0
   params:
-    learning_rate: 0.6
-    loss: exponential
-    max_features: 0.6
-    min_samples_leaf: 20
-    n_estimators: 400
-    subsample: 0.7
+    max_features: 0.8
+    min_samples_leaf: 100
+    max_depth: 10
+    n_estimators: 600
+    class_weight: balanced
+## GSM RF 1 ##
+- name: Random Forest GSM1
+  params:
+    max_features: 0.8
+    min_samples_leaf: 70
+    max_depth: 90
+    n_estimators: 500
+    class_weight: None
+## GSM RF 2 ##
+- name: Random Forest GSM2
+  params:
+    max_features: 0.5
+    min_samples_leaf: 40
+    max_depth: 50
+    n_estimators: 500
+    class_weight: None
+- name: GBoost
+  params:
+    learning_rate: 0.95
+    loss: deviance
+    max_features: 0.8
+    min_samples_leaf: 100
+    max_depth: 95
+    n_estimators: 315
+    subsample: 0.6
     warm_start: false
